syntax = "proto3";
package gravity.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/gravity-bridge/module/x/gravity/types";

// ConfirmLogicCall ...
message ConfirmLogicCall {
  bytes  invalidation_id      = 1 [
    (gogoproto.customname) = "InvalidationID",
    (gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"
  ];
  uint64 invalidation_nonce   = 2;
  string eth_signer           = 3;
  string orchestrator_address = 4;
  string signature            = 5;
}

// ConfirmBatch an orchestrator confirms a batch transaction by signing
// with the ethereum keys on the signer set.
message ConfirmBatch {
  string token_contract       = 1;
  uint64 nonce                = 2;
  string eth_signer           = 3;
  string orchestrator_address = 4;
  string signature            = 5;
}

// ConfirmSignerSet submits a signature of the validator set at a given block height. A validator
// must first call MsgSetEthAddress to set their Ethereum address to be used for signing.
// Finally validators sign the
// validator set, powers, and Ethereum addresses of the entire validator set at the height of a
// ValsetRequest and submit that signature with this message.
//
// If a sufficient number of validators (66% of voting power) (A) have set Ethereum addresses and
// (B) submit ValsetConfirm messages with their signatures it is then possible for anyone to view
// these signatures in the chain store and submit them to Ethereum to update the validator set
message ConfirmSignerSet {
  uint64 nonce                = 1;
  string eth_signer           = 2;
  string orchestrator_address = 3;
  string signature            = 4;
}
